[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/DialogueProcessor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/EndCredit.gd" type="Script" id=2]
[ext_resource path="res://Assets/vignette.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Player2Rect.gd" type="Script" id=4]
[ext_resource path="res://Assets/Pixelate.gdshader" type="Shader" id=5]
[ext_resource path="res://Assets/Fonts/dogica.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scenes/the_end.gd" type="Script" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/pixel_size = 2

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="StreamTexture" id=3]

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 1

[sub_resource type="DynamicFont" id=5]
size = 24
extra_spacing_bottom = 7
extra_spacing_char = -2
font_data = ExtResource( 6 )

[node name="EndScene" type="Node2D"]
script = ExtResource( 2 )

[node name="DialogueProcessor" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Pixelate" type="ColorRect" parent="Camera2D"]
visible = false
material = SubResource( 1 )
margin_left = -513.0
margin_top = -306.0
margin_right = 515.0
margin_bottom = 305.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthIndicator" type="TextureRect" parent="Camera2D"]
visible = false
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 2 )
margin_left = -510.0
margin_top = -298.0
margin_right = 511.0
margin_bottom = 308.0
rect_pivot_offset = Vector2( -221.661, 38.8454 )
texture = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vignette" type="Sprite" parent="Camera2D/HealthIndicator"]
light_mask = 16384
material = SubResource( 4 )
position = Vector2( 513.153, 299.752 )
scale = Vector2( 0.536419, 0.554857 )
texture = ExtResource( 3 )

[node name="Player2Rect" type="ColorRect" parent="."]
margin_left = -267.613
margin_top = -174.082
margin_right = 247.387
margin_bottom = 163.918
color = Color( 0, 0, 0, 0 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="the_end" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.5002
margin_top = -8.5
margin_right = 55.5002
margin_bottom = 8.5
grow_horizontal = 2
custom_fonts/font = SubResource( 5 )
text = "The End"
align = 1
valign = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
